--- a/index.html
+++ b/index.html
@@ -3,212 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bulendre.org - Data Analytics Portfolio</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-            line-height: 1.6;
-            color: #333;
-            background: #f5f5f5;
-        }
-
-        header {
-            background: white;
-            border-bottom: 1px solid #e0e0e0;
-            padding: 3rem 0;
-            text-align: center;
-        }
-
-        .container {
-            max-width: 900px;
-            margin: 0 auto;
-            padding: 0 1.5rem;
-        }
-
-        .header-decoration {
-            display: inline-block;
-            position: relative;
-            padding: 0 2rem;
-        }
-
-        .header-decoration::before,
-        .header-decoration::after {
-            content: '';
-            position: absolute;
-            top: 50%;
-            width: 60px;
-            height: 2px;
-            background: linear-gradient(90deg, transparent, #0066cc, transparent);
-        }
-
-        .header-decoration::before {
-            left: -70px;
-        }
-
-        .header-decoration::after {
-            right: -70px;
-        }
-
-        h1 {
-            font-size: 2.5rem;
-            font-weight: 700;
-            color: #1a1a1a;
-            letter-spacing: -0.5px;
-            margin: 0;
-        }
-
-        .subtitle {
-            color: #666;
-            margin-top: 0.75rem;
-            font-size: 1rem;
-            font-weight: 400;
-        }
-
-        main {
-            padding: 3rem 0;
-        }
-
-        .article-card {
-            background: white;
-            border-radius: 4px;
-            padding: 2rem;
-            margin-bottom: 1.5rem;
-            border: 1px solid #e0e0e0;
-            transition: box-shadow 0.2s;
-        }
-
-        .article-card:hover {
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-        }
-
-        .article-date {
-            color: #888;
-            font-size: 0.875rem;
-            margin-bottom: 0.75rem;
-        }
-
-        .article-title {
-            font-size: 1.5rem;
-            font-weight: 600;
-            color: #1a1a1a;
-            margin-bottom: 0.75rem;
-        }
-
-        .article-description {
-            color: #555;
-            margin-bottom: 1rem;
-            line-height: 1.7;
-        }
-
-        .article-link {
-            display: inline-block;
-            color: #0066cc;
-            text-decoration: none;
-            font-weight: 500;
-            font-size: 0.9rem;
-        }
-
-        .article-link:hover {
-            text-decoration: underline;
-        }
-
-        .embed-container {
-            margin-top: 1rem;
-            border-top: 1px solid #e0e0e0;
-            padding-top: 1rem;
-        }
-
-        .embed-container iframe {
-            width: 100%;
-            min-height: 500px;
-            border: none;
-            border-radius: 4px;
-        }
-
-        footer {
-            background: white;
-            border-top: 1px solid #e0e0e0;
-            padding: 2rem 0;
-            margin-top: 3rem;
-            text-align: center;
-            color: #666;
-            font-size: 0.9rem;
-        }
-
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 1.5rem;
-            }
-
-            .article-card {
-                padding: 1.5rem;
-            }
-
-            .article-title {
-                font-size: 1.25rem;
-            }
-        }
-    </style>
+    <title>Data Analyst Portfolio</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <div class="header-decoration">
-                <h1>bulendre.org</h1>
+            <div class="header-content">
+                <div class="brand">
+                    <h1>Data Analyst Portfolio</h1>
+                    <p class="subtitle">Transforming data into insights</p>
+                </div>
+                <nav>
+                    <a href="index.html" class="active">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="contact.html">Contact</a>
+                </nav>
             </div>
-            <p class="subtitle">Analize și Rapoarte Power BI</p>
         </div>
     </header>
 
-    <main>
-        <div class="container">
-            <!-- Exemplu de articol cu raport Power BI -->
-            <article class="article-card">
-                <div class="article-date">15 noiembrie 2025</div>
-                <h2 class="article-title">Analiza Vânzărilor Q3 2025</h2>
-                <p class="article-description">
-                    O analiză detaliată a performanței vânzărilor în trimestrul trei, 
-                    incluzând comparații an-la-an și identificarea tendințelor cheie pe piețele principale.
-                </p>
-                <a href="#" class="article-link">Vezi raportul complet →</a>
-                
-                <!-- Aici vei adăuga iframe-ul Power BI -->
-                <!-- <div class="embed-container">
-                    <iframe src="YOUR_POWERBI_EMBED_URL" allowfullscreen></iframe>
-                </div> -->
+    <main class="container">
+        <section class="hero">
+            <h2>Recent Analyses</h2>
+            <p class="hero-subtitle">Exploring datasets and uncovering actionable insights</p>
+        </section>
+
+        <section class="analyses-grid">
+            <article class="analysis-card">
+                <div class="card-header">
+                    <span class="tag">Python</span>
+                    <span class="tag">EDA</span>
+                </div>
+                <h3><a href="analyses/first-analysis.html">E-Commerce Customer Behavior</a></h3>
+                <p class="date">March 2024</p>
+                <p class="description">Analysis of customer purchasing patterns and segmentation using Python and exploratory data analysis techniques.</p>
+                <a href="analyses/first-analysis.html" class="read-more">Read analysis →</a>
             </article>
 
-            <article class="article-card">
-                <div class="article-date">8 noiembrie 2025</div>
-                <h2 class="article-title">Dashboard Comportament Clienți</h2>
-                <p class="article-description">
-                    Studiu comprehensive asupra comportamentului clienților, segmentare avansată 
-                    și recomandări pentru îmbunătățirea ratei de retenție.
-                </p>
-                <a href="#" class="article-link">Vezi raportul complet →</a>
-            </article>
-
-            <article class="article-card">
-                <div class="article-date">1 noiembrie 2025</div>
-                <h2 class="article-title">Raport Financiar Octombrie</h2>
-                <p class="article-description">
-                    Prezentare generală a indicatorilor financiari pentru luna octombrie, 
-                    cu accent pe fluxul de numerar și marjele de profit pe categorii de produse.
-                </p>
-                <a href="#" class="article-link">Vezi raportul complet →</a>
-            </article>
-        </div>
+            <!-- Add more analyses here by copying the article.analysis-card structure -->
+            
+        </section>
     </main>
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 bulendre.org - Toate drepturile rezervate</p>
+            <p>&copy; 2024 Data Analyst Portfolio</p>
         </div>
     </footer>
 </body>
