--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Analyst Portfolio</title>
+    <title>Data Analyst Portofolio</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="brand">
-                    <h1>Data Analyst Portfolio</h1>
+                    <h1>Fashion Analytics Portfolio</h1>
                     <p class="subtitle">Transforming data into insights</p>
                 </div>
                 <nav>
@@ -48,8 +48,9 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Data Analyst Portfolio</p>
+            <p>&copy; © 2025 Bulendre.org™. All rights reserved.</p>
         </div>
     </footer>
 </body>
+
 </html>
