--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
 
     <footer>
         <div class="container">
-            <p>&copy; © 2025 Bulendre.org™. All rights reserved.</p>
+            <p>&copy; 2025 Bulendre.org™. All rights reserved.</p>
         </div>
     </footer>
 </body>
 
 </html>
+
