--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="brand">
-                    <h1>Data Analyst Portfolio</h1>
+                    <h1>Fashion Analytics Portfolio</h1>
                     <p class="subtitle">Transforming data into insights</p>
                 </div>
                 <nav>
@@ -56,8 +56,9 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Data Analyst Portfolio</p>
+            <p>&copy; 2025 Bulendre.org™. All rights reserved.</p>
         </div>
     </footer>
 </body>
+
 </html>
