--- a/contact.html
+++ b/contact.html
@@ -35,19 +35,19 @@
                     <div class="contact-item">
                         <div class="contact-icon">✉️</div>
                         <h3>Email</h3>
-                        <a href="mailto:your.email@example.com">your.email@example.com</a>
+                        <a href="mailto:constantin.moldovanu@proton.me">your.email@example.com</a>
                     </div>
                     
                     <div class="contact-item">
                         <div class="contact-icon">💻</div>
                         <h3>GitHub</h3>
-                        <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a>
+                        <a href="https://github.com/unconstantin" target="_blank">github.com/yourusername</a>
                     </div>
                     
                     <div class="contact-item">
                         <div class="contact-icon">💼</div>
                         <h3>LinkedIn</h3>
-                        <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a>
+                        <a href="https://www.linkedin.com/in/un-constantin/" target="_blank">linkedin.com/in/yourprofile</a>
                     </div>
                 </div>
             </div>
@@ -62,3 +62,4 @@
 </body>
 
 </html>
+
