--- a/contact.html
+++ b/contact.html
@@ -35,19 +35,19 @@
                     <div class="contact-item">
                         <div class="contact-icon">✉️</div>
                         <h3>Email</h3>
-                        <a href="mailto:constantin.moldovanu@proton.me">your.email@example.com</a>
+                        <a href="mailto:constantin.moldovanu@proton.me">constantin.moldovanu@proton.me</a>
                     </div>
                     
                     <div class="contact-item">
                         <div class="contact-icon">💻</div>
                         <h3>GitHub</h3>
-                        <a href="https://github.com/unconstantin" target="_blank">github.com/yourusername</a>
+                        <a href="https://github.com/unconstantin" target="_blank">https://github.com/unconstantin</a>
                     </div>
                     
                     <div class="contact-item">
                         <div class="contact-icon">💼</div>
                         <h3>LinkedIn</h3>
-                        <a href="https://www.linkedin.com/in/un-constantin/" target="_blank">linkedin.com/in/yourprofile</a>
+                        <a href="https://www.linkedin.com/in/un-constantin/" target="_blank">linkedin.com/in/un-constantin</a>
                     </div>
                 </div>
             </div>
@@ -62,4 +62,5 @@
 </body>
 
 </html>
+
 
