--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
                     <div class="contact-item">
                         <div class="contact-icon">💻</div>
                         <h3>GitHub</h3>
-                        <a href="https://github.com/unconstantin" target="_blank">https://github.com/unconstantin</a>
+                        <a href="https://github.com/unconstantin" target="_blank">github.com/unconstantin</a>
                     </div>
                     
                     <div class="contact-item">
@@ -62,5 +62,6 @@
 </body>
 
 </html>
+
 
 
