--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
         <div class="container">
             <div class="header-content">
                 <div class="brand">
-                    <h1>Fashion Analytics Portfolio</h1>
-                    <p class="subtitle">Transforming data into insights</p>
-                </div>
+                    <h1 class="logo">bulendre</h1>
+                     <p class="subtitle">They’re just clothes. Let’s look at the data.</p>
+                        </div>
+
                 <nav>
                     <a href="index.html" class="active">Home</a>
                     <a href="about.html">About</a>
@@ -31,15 +32,25 @@
 
         <section class="analyses-grid">
             <article class="analysis-card">
-                <div class="card-header">
-                    <span class="tag">Python</span>
-                    <span class="tag">EDA</span>
-                </div>
-                <h3><a href="analyses/first-analysis.html">E-Commerce Customer Behavior</a></h3>
-                <p class="date">March 2024</p>
-                <p class="description">Analysis of customer purchasing patterns and segmentation using Python and exploratory data analysis techniques.</p>
-                <a href="analyses/first-analysis.html" class="read-more">Read analysis →</a>
-            </article>
+    <div class="tags-row">
+        <span class="tag">SQL</span>
+        <span class="tag">Power BI</span>
+        <span class="tag">E-commerce</span>
+    </div>
+
+    <h3>Wish: Can Cheap Go Global?</h3>
+    <p class="card-date">November 2025</p>
+
+    <p class="card-description">
+        Analysis of Wish’s summer 2020 products to understand how low prices,
+        product quality, and global reach influence customer behavior and sales performance.
+    </p>
+
+    <a href="analyses/first-analysis.html" class="card-link">
+        Read analysis →
+    </a>
+</article>
+
 
             <!-- Add more analyses here by copying the article.analysis-card structure -->
             
