--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - bulendre</title>
+    <title>BULENDRE - About</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -11,9 +11,12 @@
         <div class="container">
             <div class="header-content">
                 <div class="brand">
-                    <h1 class="logo">bulendre</h1>
-                    <p class="subtitle">They’re just clothes. Let’s look at the data.</p>
-                </div>
+    <a href="index.html" class="brand-link">
+        <img src="assets/logo.svg" alt="bulendre" class="brand-logo">
+    </a>
+    <p class="subtitle">They’re just clothes. Let’s look at the data.</p>
+</div>
+
 
                 <nav>
                     <a href="index.html">Home</a>
