--- a/contact.html
+++ b/contact.html
@@ -1,68 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BULENDRE - Contact</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-    <header>
-        <div class="container">
-            <div class="header-content">
-                <div class="brand">
-    <a href="index.html" class="brand-link">
-        <img src="assets/logo.svg" alt="bulendre" class="brand-logo">
-    </a>
-    <p class="subtitle">They’re just clothes. Let’s look at the data.</p>
-</div>
-
-
-                <nav>
-                    <a href="index.html">Home</a>
-                    <a href="about.html">About</a>
-                    <a href="contact.html" class="active">Contact</a>
-                </nav>
-            </div>
-        </div>
-    </header>
-
-    <main class="container">
-        <article class="content-page">
-            <div class="page-header">
-                <h2>Let&rsquo;s connect</h2>
-<p class="lead">
-    Whether you have a question about my projects, want to discuss a role, or have an idea for a new project,
-    I&apos;m always open to a conversation. Send me a message by email or connect with me on LinkedIn.
-</p>
-            </div>
-            
-            <div class="content-section">
-                <div class="contact-grid">
-                    <div class="contact-item">
-                        <div class="contact-icon">✉️</div>
-                        <h3>Email</h3>
-                        <a href="mailto:constantin.moldovanu@proton.me">
-                            constantin.moldovanu@proton.me
-                        </a>
-                    </div>
-                    
-                    <div class="contact-item">
-                        <div class="contact-icon">💼</div>
-                        <h3>LinkedIn</h3>
-                        <a href="https://www.linkedin.com/in/un-constantin/" target="_blank">
-                            linkedin.com/in/un-constantin
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </article>
-    </main>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 Bulendre.org™. All rights reserved.</p>
-        </div>
-    </footer>
-</body>
-</html>
+<!doctype html><html><head>
+<meta charset="utf-8">
+<meta http-equiv="refresh" content="0; url=/contact">
+<link rel="canonical" href="/contact">
+<title>Redirect</title>
+<script>location.replace("/contact");</script>
+</head><body>If you are not redirected, <a href="/contact">click here</a>.</body></html>
