--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="brand">
-    <a href="index.html" class="brand-link">
+    <a href="index"" class="brand-link">
         <img src="assets/logo.svg" alt="bulendre" class="brand-logo">
     </a>
     <p class="subtitle">They’re just clothes. Let’s look at the data.</p>
@@ -19,9 +19,9 @@
 
 
                 <nav>
-                    <a href="index.html" class="active">Home</a>
-                    <a href="about.html">About</a>
-                    <a href="contact.html">Contact</a>
+                    <a href="index"" class="active">Home</a>
+                    <a href="about"">About</a>
+                    <a href="contact"">Contact</a>
                 </nav>
             </div>
         </div>
@@ -35,7 +35,7 @@
 
         <section class="analyses-grid">
             <!-- Cardul întreg este acum clicabil -->
-            <a href="analyses/first-analysis.html" class="analysis-card-link">
+            <a href="analyses/first-analysis"" class="analysis-card-link">
                 <article class="analysis-card">
                     <div class="card-header">
                         <span class="tag">SQL</span>
