--- a/about.html
+++ b/about.html
@@ -1,7 +1,1 @@
-<!doctype html><html><head>
-<meta charset="utf-8">
-<meta http-equiv="refresh" content="0; url=/about">
-<link rel="canonical" href="/about">
-<title>Redirect</title>
-<script>location.replace("/about");</script>
-</head><body>If you are not redirected, <a href="/about">click here</a>.</body></html>
+<!doctype html><meta http-equiv="refresh" content="0; url=/about/">
