--- a/analyses/first-analysis.html
+++ b/analyses/first-analysis.html
@@ -1,7 +1,1 @@
-<!doctype html><html><head>
-<meta charset="utf-8">
-<meta http-equiv="refresh" content="0; url=/analyses/first-analysis">
-<link rel="canonical" href="/analyses/first-analysis">
-<title>Redirect</title>
-<script>location.replace("/analyses/first-analysis");</script>
-</head><body>If you are not redirected, <a href="/analyses/first-analysis">click here</a>.</body></html>
+<!doctype html><meta http-equiv="refresh" content="0; url=/analyses/first-analysis/">
