--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,1 @@
-<!doctype html><html><head>
-<meta charset="utf-8">
-<meta http-equiv="refresh" content="0; url=/contact">
-<link rel="canonical" href="/contact">
-<title>Redirect</title>
-<script>location.replace("/contact");</script>
-</head><body>If you are not redirected, <a href="/contact">click here</a>.</body></html>
+<!doctype html><meta http-equiv="refresh" content="0; url=/contact/">
