--- a/analyses/first-analysis/index.html
+++ b/analyses/first-analysis/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<base href="/analyses/first-analysis/">
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wish Summer Products Analysis</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../../assets/css/style.css">
 </head>
 <body>
     <header>
         <div class="container">
             <div class="header-content">
                 <div class="brand">
-    <a href="../index" class="brand-link">
-        <img src="../assets/logo.svg" alt="bulendre" class="brand-logo">
+    <a href="/" class="brand-link">
+        <img src="../../assets/logo.svg" alt="bulendre" class="brand-logo">
     </a>
     <p class="subtitle">They’re just clothes. Let’s look at the data.</p>
 </div>
@@ -22,9 +20,9 @@
 
 
                 <nav>
-                    <a href="../index">Home</a>
-                    <a href="../about">About</a>
-                    <a href="../contact">Contact</a>
+                    <a href="/">Home</a>
+                    <a href="/about/">About</a>
+                    <a href="/contact/">Contact</a>
                 </nav>
             </div>
         </div>
@@ -158,7 +156,7 @@
             </section>
 
             <div class="analysis-footer">
-                <a href="../index" class="back-link">← Back to all analyses</a>
+                <a href="/" class="back-link">← Back to all analyses</a>
             </div>
         </article>
     </main>
