--- a/contact/index.html
+++ b/contact/index.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<base href="/contact/">
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BULENDRE - Contact</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
     <header>
         <div class="container">
             <div class="header-content">
                 <div class="brand">
-    <a href="index" class="brand-link">
-        <img src="assets/logo.svg" alt="bulendre" class="brand-logo">
+    <a href="/" class="brand-link">
+        <img src="../assets/logo.svg" alt="bulendre" class="brand-logo">
     </a>
     <p class="subtitle">They’re just clothes. Let’s look at the data.</p>
 </div>
 
 
                 <nav>
-                    <a href="index">Home</a>
-                    <a href="about">About</a>
-                    <a href="contact" class="active">Contact</a>
+                    <a href="/">Home</a>
+                    <a href="/about/">About</a>
+                    <a href="/contact/" class="active">Contact</a>
                 </nav>
             </div>
         </div>
