--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<base href="/">
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BULENDRE - Home</title>
@@ -13,7 +11,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="brand">
-    <a href="index" class="brand-link">
+    <a href="/" class="brand-link">
         <img src="assets/logo.svg" alt="bulendre" class="brand-logo">
     </a>
     <p class="subtitle">They’re just clothes. Let’s look at the data.</p>
@@ -21,9 +19,9 @@
 
 
                 <nav>
-                    <a href="index" class="active">Home</a>
-                    <a href="about">About</a>
-                    <a href="contact">Contact</a>
+                    <a href="/" class="active">Home</a>
+                    <a href="/about/">About</a>
+                    <a href="/contact/">Contact</a>
                 </nav>
             </div>
         </div>
@@ -37,7 +35,7 @@
 
         <section class="analyses-grid">
             <!-- Cardul întreg este acum clicabil -->
-            <a href="analyses/first-analysis" class="analysis-card-link">
+            <a href="/analyses/first-analysis/" class="analysis-card-link">
                 <article class="analysis-card">
                     <div class="card-header">
                         <span class="tag">SQL</span>
