--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="brand">
-    <a href="/" class="brand-link">
+    <a href="../index.html" class="brand-link">
         <img src="../assets/logo.svg" alt="bulendre" class="brand-logo">
     </a>
     <p class="subtitle">They’re just clothes. Let’s look at the data.</p>
@@ -19,9 +19,9 @@
 
 
                 <nav>
-                    <a href="/">Home</a>
-                    <a href="/about/" class="active">About</a>
-                    <a href="/contact/">Contact</a>
+                    <a href="../index.html">Home</a>
+                    <a href="../about/" class="active">About</a>
+                    <a href="../contact/">Contact</a>
                 </nav>
             </div>
         </div>
