--- a/analyses/first-analysis/index.html
+++ b/analyses/first-analysis/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="brand">
-    <a href="/" class="brand-link">
+    <a href="../../index.html" class="brand-link">
         <img src="../../assets/logo.svg" alt="bulendre" class="brand-logo">
     </a>
     <p class="subtitle">They’re just clothes. Let’s look at the data.</p>
@@ -20,9 +20,9 @@
 
 
                 <nav>
-                    <a href="/">Home</a>
-                    <a href="/about/">About</a>
-                    <a href="/contact/">Contact</a>
+                    <a href="../../index.html">Home</a>
+                    <a href="../../about/">About</a>
+                    <a href="../../contact/">Contact</a>
                 </nav>
             </div>
         </div>
@@ -156,7 +156,7 @@
             </section>
 
             <div class="analysis-footer">
-                <a href="/" class="back-link">← Back to all analyses</a>
+                <a href="../../index.html" class="back-link">← Back to all analyses</a>
             </div>
         </article>
     </main>
