--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BULENDRE - About</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
     <header>
@@ -12,7 +12,7 @@
             <div class="header-content">
                 <div class="brand">
     <a href="index.html" class="brand-link">
-        <img src="assets/logo.svg" alt="bulendre" class="brand-logo">
+        <img src="...assets/logo.svg" alt="bulendre" class="brand-logo">
     </a>
     <p class="subtitle">They’re just clothes. Let’s look at the data.</p>
 </div>
@@ -105,3 +105,4 @@
     </footer>
 </body>
 </html>
+
