--- a/about.html
+++ b/about.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BULENDRE - About</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <header>
         <div class="container">
             <div class="header-content">
                 <div class="brand">
-    <a href="index.html" class="brand-link">
-        <img src="...assets/logo.svg" alt="bulendre" class="brand-logo">
+    <a href="/" class="brand-link">
+        <img src="assets/logo.svg" alt="bulendre" class="brand-logo">
     </a>
     <p class="subtitle">They’re just clothes. Let’s look at the data.</p>
 </div>
@@ -105,4 +105,3 @@
     </footer>
 </body>
 </html>
-
