--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="brand">
-    <a href="index.html" class="brand-link">
+    <a href="/" class="brand-link">
         <img src="assets/logo.svg" alt="bulendre" class="brand-logo">
     </a>
     <p class="subtitle">They’re just clothes. Let’s look at the data.</p>
