--- a/contact/index.html
+++ b/contact/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="brand">
-    <a href="../index.html" class="brand-link">
+    <a href="/" class="brand-link">
         <img src="../assets/logo.svg" alt="bulendre" class="brand-logo">
     </a>
     <p class="subtitle">They’re just clothes. Let’s look at the data.</p>
@@ -19,7 +19,7 @@
 
 
                 <nav>
-                    <a href="../index.html">Home</a>
+                    <a href="/">Home</a>
                     <a href="../about/">About</a>
                     <a href="../contact/" class="active">Contact</a>
                 </nav>
