--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bulendre - Home</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <script>
+    if (location.pathname.endsWith("index.html")) {
+        location.replace("/");
+    }
+</script>
 </head>
 <body>
     <header>
