--- a/analyses/first-analysis.html
+++ b/analyses/first-analysis.html
@@ -32,7 +32,7 @@
         <article class="analysis-page">
             <div class="analysis-header">
                 <div class="tags-row">
-    <span class="tag">SQL</span>
+    <span class="tag">Python</span>
     <span class="tag">Power BI</span>
     <span class="tag">E-commerce</span>
 </div>
