--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a href="analyses/wish-cheap-go-global/" class="analysis-card-link">
                 <article class="analysis-card">
                     <div class="card-header">
-                        <span class="tag">SQL</span>
+                        <span class="tag">Python</span>
                         <span class="tag">Power BI</span>
                         <span class="tag">E-commerce</span>
                     </div>
