--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bulendre - Home</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" href="/assets/B-logo.svg" type="image/svg+xml">
     <script>
     if (location.pathname.endsWith("index.html")) {
         location.replace("/");
