--- a/about/index.html
+++ b/about/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bulendre - About</title>
     <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="icon" href="/assets/B-logo.svg" type="image/svg+xml">
+
 </head>
 <body>
     <header>
@@ -38,13 +40,18 @@
 
             <div class="content-section">
                 <h3>Why bulendre?</h3>
-                <p>
-                    If you ask a Romanian about “bulendre”, they’ll think of bags of old clothes, not a catwalk.
-                    Now imagine the same word said as if it were French. It almost becomes a chic brand!
-                    You could picture it on a perfume bottle. That gap between meaning and sound is why I chose it.
-                    I’m less interested in the illusion around clothes and more in what the data underneath actually shows.
-                </p>
-            </div>
+                <div class="info-box">
+        <p>
+  If you ask a Romanian about <strong>“bulendre”</strong>, they’ll think of 
+  bags of <strong>old clothes</strong>, not a catwalk. Now imagine the same 
+  word said as if it were French. It almost becomes a <strong>chic brand</strong>! 
+  You could picture it on a perfume bottle. 
+  <strong>That gap</strong> between <strong>meaning</strong> and <strong>sound</strong> is why I chose it. 
+  I’m less interested in the illusion around clothes and more in 
+  <strong>what the data underneath actually shows</strong>.
+</p>
+    </div>
+</div>
 
             <div class="content-section">
                 <h3>Technical Skills</h3>
@@ -69,32 +76,33 @@
             </div>
 
             <div class="content-section">
-                <h3>Project Focus</h3>
+    <h3>Project focus</h3>
 
-                <p>
-                    At some point I realised, to my surprise, that industrial clothing is a very recent chapter in our history.
-                    Over time, new technology and the economic pressure to produce more, faster, and cheaper pushed clothing
-                    out of the tailor’s hands and into mass-production systems.
-                </p>
+    <div class="info-box">
+        <p>
+            I didn’t start with a grand plan to “fix” fashion. It began with a simple <strong>realisation:</strong> the way we make and buy clothes today is brand new in historical terms. For centuries, garments were built slowly, altered over time, and made for a specific person. Now, in only a few decades, we’ve normalised fast cycles, global supply chains, and closets full of items <strong>we barely wear.</strong>
+        </p>
+    </div>
 
-                <p>
-                    Not long ago, it was normal to choose a fabric, go to a tailor, and build a wardrobe over time that truly
-                    suited your life. Tailors haven’t disappeared, but the price difference compared to mass-produced clothing
-                    means they’re rarely the first long-term option people think of.
-                </p>
+    <div class="info-box">
+        <p>
+            I’m not trying to turn that past into a fairy tale, and I’m not interested in attacking specific companies. Some brands are clearly trying to change things. But <strong>the system</strong> as a whole still causes enormous <strong>harm</strong>. The old world won’t return, and there’s no point crying over an idealised version of it.
+        </p>
+    </div>
 
-                <p>
-                    I even had a phase where I wanted to make my own clothes, and as I looked into it I kept coming back to the
-                    same thought: somewhere along the way, something changed dramatically.
-                </p>
+    <div class="info-box">
+        <p>
+            Since we can’t roll history back, I prefer to <strong>focus on</strong> what’s left in our hands: <strong>the data</strong> these systems produce every day. What we do have are the footprints this system leaves behind: prices, inventories, shipping routes, working hours, ratings, returns. All of that is data.
+        </p>
+    </div>
 
-                <p>
-                    I carry a lot of open questions about fashion today, and my mission here is to slowly uncover what happened
-                    in between. Bulendre.org is the place where I try to explore those questions using the data analysis skills I
-                    learned through Wawiwa’s program. It’s a practical space for me to apply what I’m learning and to develop,
-                    project by project, as a junior data analyst.
-                </p>
-            </div>
+    <div class="info-box">
+        <p>
+            My focus is on <strong>using that data</strong>, with the skills I currently have, to ask small, concrete questions about how fashion works today and how it might work better tomorrow. <strong>Bulendre.org</strong> is where I document those questions and experiments, project by project, as a junior data analyst who believes that better information can support <strong>better decisions</strong>.
+        </p>
+    </div>
+</div>
+
         </article>
     </main>
 
