--- a/contact/index.html
+++ b/contact/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bulendre - Contact</title>
     <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="icon" href="/assets/B-logo.svg" type="image/svg+xml">
 </head>
 <body>
     <header>
