--- a/analyses/wish-cheap-go-global/index.html
+++ b/analyses/wish-cheap-go-global/index.html
@@ -202,24 +202,21 @@
                 </ul>
             </section>
 
-            <section class="analysis-section">
-                <h3>Interactive Dashboard</h3>
-                <p>
-                    Explore the full analysis in the interactive Power BI dashboard below, which summarises merchant reliability, price ranges, 
-                    global reach, and the impact of advertising.
-                </p>
+                <section id="analysis-section">
+  <h2>Interactive Dashboard</h2>
 
-                <div class="powerbi-embed">
-                    <iframe
-                        title="Wish Summer Products 2020 Dashboard"
-                        width="100%"
-                        height="800"
-                        src="https://app.powerbi.com/view?r=eyJrIjoiN2NmOTg5OGUtMzhiNC00NjU1LTg5MjItZTcxMDQwYzQzZjYyIiwidCI6IjJhZjUzNDlhLTc1MTktNDgyNy1iYjUwLTI2ZTVhMzQxNzcwYSIsImMiOjl9"
-                        frameborder="0"
-                        allowfullscreen="true">
-                    </iframe>
-                </div>
-            </section>
+  <div class="powerbi-embed">
+    <iframe
+      title="Wish Summer Products 2020 Dashboard"
+      width="100%"
+      height="800"
+      src="https://app.powerbi.com/view?r=eyJrIjoiN2NmOTg5OGUtMzhiNC00NjU1LTg5MjItZTcxMDQwYzQzZjYyIiwidCI6IjJhZjUzNDlhLTc1MTktNDgyNy1iYjUwLTI2ZTVhMzQxNzcwYSIsImMiOjl9"
+      frameborder="0"
+      allowfullscreen="true">
+    </iframe>
+  </div>
+</section>
+
 
             <div class="analysis-footer">
                 <a href="../../index.html" class="back-link">← Back to all analyses</a>
