--- a/analyses/wish-cheap-go-global/index.html
+++ b/analyses/wish-cheap-go-global/index.html
@@ -202,7 +202,7 @@
                 </ul>
             </section>
 
-            <section class="analysis-section">
+            <section class="analysis-section analysis-section-wide">
                 <h3>Interactive Dashboard</h3>
                 <p>
                     Explore the full analysis in the interactive Power BI dashboard below, which summarises merchant reliability, price ranges, 
@@ -212,11 +212,11 @@
                 <div class="powerbi-embed">
                     <iframe
                         title="Wish Summer Products 2020 Dashboard"
-                        width="100%"
-                        height="800"
-                        src="https://app.powerbi.com/view?r=eyJrIjoiN2JhNjcxYWItMTZjZi00NGVmLTk2MWEtYjk0NzI5NTk3NmY4IiwidCI6IjJhZjUzNDlhLTc1MTktNDgyNy1iYjUwLTI2ZTVhMzQxNzcwYSIsImMiOjl9"
+                        width="1024"
+                        height="804"
+                        src="https://app.powerbi.com/view?r=eyJrIjoiMGU4YzE4YWMtNzkwNC00ZjUzLTkyNWEtYjBiNWQ0YzQ5ZTgyIiwidCI6IjJhZjUzNDlhLTc1MTktNDgyNy1iYjUwLTI2ZTVhMzQxNzcwYSIsImMiOjl9"
                         frameborder="0"
-                        allowfullscreen="true">
+                        allowFullScreen="true">
                     </iframe>
                 </div>
             </section>
