--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 
     <main class="container">
         <section class="hero">
-            <h2>Recent Analyses</h2>
             <p class="hero-subtitle">Exploring datasets and uncovering actionable insights</p>
         </section>
 
@@ -61,7 +60,23 @@
                 </article>
             </a>
 
-            <!-- Când mai adaugi proiecte, duplică structura <a> ... </a> de mai sus -->
+            <!-- Coming Soon Card — non-clickable -->
+            <div class="analysis-card-link coming-soon-wrapper">
+                <article class="analysis-card coming-soon-card">
+                    <div class="card-header">
+                        <span class="tag">Coming Soon</span>
+                    </div>
+
+                    <h3>New analysis in progress</h3>
+                    <span class="date">2026</span>
+
+                    <p class="description">
+                        A new data project is currently being prepared. Stay tuned for the full analysis.
+                    </p>
+
+                    <span class="read-more coming-soon-label">Coming soon</span>
+                </article>
+            </div>
         </section>
     </main>
 
