--- a/about/index.html
+++ b/about/index.html
@@ -72,10 +72,12 @@
                 </div>
 
                 <ul class="skill-bullets">
-                    <li>CTEs, subqueries, joins, window functions</li>
-                    <li>Cleaning + transforming raw tables into analysis-ready datasets</li>
-                    <li>KPIs: cohorts, funnels, time series aggregations</li>
-                    <li>Readable, reusable SQL (views / modular queries)</li>
+                    <li>Data retrieval &amp; filtering</li>
+                    <li>Aggregations &amp; KPI calculations</li>
+                    <li>Table joins (relational databases)</li>
+                    <li>Subqueries &amp; CTEs</li>
+                    <li>Basic window functions</li>
+                    <li>Views &amp; data manipulation</li>
                 </ul>
             </div>
         </div>
@@ -101,10 +103,11 @@
                 </div>
 
                 <ul class="skill-bullets">
-                    <li>Cleaning and structuring messy spreadsheets</li>
-                    <li>Formulas: XLOOKUP, SUMIFS, IF, text/date functions</li>
-                    <li>Pivot tables + charts for fast insight</li>
-                    <li>Simple dashboards and stakeholder-friendly reporting</li>
+                    <li>Data cleaning &amp; structuring</li>
+                    <li>Advanced Excel formulas</li>
+                    <li>Pivot Tables &amp; charts</li>
+                    <li>Dashboards</li>
+                    <li>Conditional formatting</li>
                 </ul>
             </div>
         </div>
@@ -130,10 +133,11 @@
                 </div>
 
                 <ul class="skill-bullets">
-                    <li>Power Query transformations (shape, clean, combine)</li>
-                    <li>Data modeling (relationships, star schema basics)</li>
-                    <li>DAX measures for KPIs + time intelligence</li>
-                    <li>Interactive dashboards with clear UX + storytelling</li>
+                    <li>Transform and clean data using Power Query</li>
+                    <li>Build data models (relationships, basic star schema)</li>
+                    <li>Create DAX measures for KPIs</li>
+                    <li>Design interactive reports with filters and slicers</li>
+                    <li>Build clear and simple dashboards</li>
                 </ul>
             </div>
         </div>
@@ -159,10 +163,10 @@
                 </div>
 
                 <ul class="skill-bullets">
-                    <li>pandas: cleaning, merging, groupby, feature creation</li>
-                    <li>Exploratory analysis + quick charts (matplotlib)</li>
-                    <li>Reproducible workflows (notebooks / scripts)</li>
-                    <li>Basic ML with scikit-learn (classification / regression)</li>
+                    <li>Data cleaning and transformation (pandas)</li>
+                    <li>Grouping, aggregation, merging</li>
+                    <li>Exploratory analysis &amp; basic charts</li>
+                    <li>Basic machine learning models</li>
                 </ul>
             </div>
         </div>
