--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
                     </div>
 
                     <h3>Wish: Can Cheap Go Global?</h3>
-                    <span class="date">November 2025</span>
 
                     <p class="description">
                         Analysis of Wish's summer 2020 products to understand how low prices,
@@ -67,11 +66,10 @@
                         <span class="tag">Coming Soon</span>
                     </div>
 
-                    <h3>New analysis in progress</h3>
-                    <span class="date">2026</span>
+                    <h3>Fast Fashion: What's the Real Price?</h3>
 
                     <p class="description">
-                        A new data project is currently being prepared. Stay tuned for the full analysis.
+                        An analysis of 3,000 production records across Shein, Zara, H&amp;M, Uniqlo, and Forever 21. Tracking carbon emissions, water usage, worker wages, and sustainability scores.
                     </p>
 
                     <span class="read-more coming-soon-label">Coming soon</span>
